--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ mysql-connector-python = "^9.0.0"
 langchain = "^0.2.7"
 langchain-community = "^0.2.7"
 python-dotenv = "^1.0.1"
+pdfminer-six = "^20240706"
+flask-cors = "^4.0.1"
+pybase64 = "^1.3.2"
 
 
 [build-system]
