--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.1"
 pdfminer-six = "^20240706"
 flask-cors = "^4.0.1"
 pybase64 = "^1.3.2"
+firebase-admin = "^6.5.0"
 
 
 [build-system]
