--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ langsmith = "^0.1.147"
 langchain = "^0.3.9"
 langchain-community = "^0.3.8"
 langchain-google-vertexai = "^2.0.8"
+langchain-google-genai = "^2.0.6"
 
 
 [build-system]
